--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "ts-node server.ts",
     "server": "nodemon server.ts",
     "client": "cd ../frontend && npm run dev",
+    // "dev": "concurrently \"npm run server\" \"npm run client\"",
     "build": "tsc",
     "dev": "ts-node api/server.ts"
   },
