Prepare serverless deployment assadas

--- a/.env
+++ b/.env
@@ -3,7 +3,7 @@ JWT_SECRET=sasaqwewqeqw
 MONGO_URI=mongodb+srv://rameesarashid77:VOtkOlsKAxW1IGvH@foodpointcluster.2ixvkwn.mongodb.net/FoodPoint
 EMAIL_USER=makifhussain1621@gmail.com
 EMAIL_PASS=wfcy ctsl ephq thbe
-FRONTEND_URL=http://localhost:5173
+FRONTEND_URL=https://food-point-frontend.vercel.app/
 NODE_ENV=development
 CLOUDINARY_CLOUD_NAME=dpltxkcur
 CLOUDINARY_API_KEY=835985452478932
